<resources>
    <string name="app_name">tuneplay</string>
    <string name="title_home">首页</string>
    <string name="title_player">播放</string>
    <string name="title_profile">个人中心</string>
    <string name="search_hint">搜索歌曲、歌手、专辑…</string>
    <string name="notification_channel_name">Playback</string>
    <string name="notification_channel_desc">Music playback controls</string>
    <string name="playlist_liked">我喜欢</string>
    <string name="carousel_label">你的喜欢</string>
    <string name="recommend_label">猜你喜欢</string>
    <string name="playlist_recommend_label">推荐歌单</string>
    <string name="discover_label">发现更多</string>
    <string name="footer_hint">已经到底了哦~</string>
    <string name="playlist_select_title">添加到歌单</string>
    <string name="playlist_create_new">创建新歌单</string>
    <string name="playlist_create_hint">歌单名称</string>
    <string name="playlist_create_confirm">创建</string>
    <string name="playlist_create_cancel">取消</string>
    <string name="playlist_already_exists">歌单已存在</string>
    <string name="playlist_added">已添加到歌单</string>
    <string name="playlist_removed">已从歌单移除</string>
    <string name="title_lyrics">歌词</string>
    <string name="lyrics_instrumental">纯音乐，请欣赏</string>
    <string name="section_recommended">为你推荐</string>
    <string name="section_recently_played">最近播放</string>
    <string name="import_title">导入音乐</string>
    <string name="import_scan_library">扫描本地媒体库</string>
    <string name="import_scan_library_desc">自动扫描手机中全部音乐文件</string>
    <string name="import_pick_files">选择文件导入</string>
    <string name="import_pick_files_desc">手动选择音乐文件或文件夹</string>
    <string name="import_scan_empty">未找到音乐文件</string>
    <string name="import_scan_result">已导入 %d 首歌曲</string>
    <string name="import_file_added">已导入 1 首歌曲</string>
    <string name="import_files_added">已导入 %d 首歌曲</string>
    <string name="section_online_results">在线搜索</string>
    <string name="online_play_failed">无法播放此歌曲，可能需登录或付费</string>
    <string name="home_empty_hint">还没有音乐\n点击右下角 + 扫描或导入</string>
    <string name="profile_nickname_dialog_title">修改昵称</string>
    <string name="profile_nickname_hint">输入昵称</string>
    <string name="profile_stat_duration">听歌时长</string>
    <string name="lastfm_api_key"></string>
    <string name="local_music">本地音乐</string>
    <string name="local_music_empty">暂无本地音乐，点击 + 上传</string>
    <string name="local_music_upload">上传本地音乐</string>
</resources>